Inbox controller handle create:note
